--- a/react-basics/src/styles/Card.css
+++ b/react-basics/src/styles/Card.css
@@ -1,35 +1,41 @@
-* {
-  margin: 0;
-  padding: 0;
+section {
+  margin: auto;
+  margin-top: 5%;
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
 }
 
 .cards {
-  width: 100%;
-  height: 350px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: black;
-}
-img {
-  height: 220px;
   width: 250px;
+  padding: 20px;
+}
+.cards:hover {
+  box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0);
+  cursor: pointer;
+}
+.image_box img {
+  height: 150px;
+  width: 200px;
 }
 
-.details {
-  color: white;
-  width: 280px;
-  height: 100px;
-  margin-top: 0px;
-  margin-left: 50px;
-  /* background-color: rgb(117, 231, 248); */
-  /* padding: 30px; */
-  padding-top: 20px;
+.details p:nth-child(1) {
+  font-weight: bold;
 }
-.btn {
-  width: 100px;
-  height: 30px;
-  color: white;
+.details p:nth-child(2) {
+  color: grey;
+  font-size: 0.8rem;
+}
+.details p:nth-child(3) {
+  font-weight: bold;
+  color: grey;
+}
+.details button {
+  padding: 5px 10px;
+  font-weight: bold;
+  border: none;
   background-color: blue;
-  margin-top: 10px;
+  outline: none;
+  border-radius: 2px;
 }
